fixed page visibility

--- a/style.css
+++ b/style.css
@@ -66,7 +66,7 @@ body {
   transform: rotateY(-135deg);   
 }
 
-.content {
+.page {
   position: absolute;
   top: 0;
   left: 0;
@@ -80,7 +80,6 @@ body {
   font-size: 12px;
   background: #fff;
   backface-visibility: hidden;
-  visibility: hidden;
   z-index: 1;
 }
 
@@ -98,12 +97,10 @@ body {
 .card.flipped .page-one {
   transform-origin: center left;
   transform: rotateY(-180deg);
-  visibility: visible;
 }
 
 .card.flipped .page-two {
   transform: rotateY(0deg);
-  visibility: visible;
 }
 
 .content h2 {
